--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,4 +14,5 @@ if(BUILD_SHARED_LIBS)
 else()
 	add_library(${PROJECT_NAME} STATIC ${SOURCE_FILES})
 endif()
+target_link_libraries(${PROJECT_NAME} SDL3)
 target_include_directories(${PROJECT_NAME} PRIVATE src/)
