--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,4 @@
-cmake_minimum_required(VERSION 3.25)
-set(LIBRARY_NAME "AuriText")
-
+cmake_minimum_required(VERSION 2.25)
 project(AuriText LANGUAGES C)
 
 set(CMAKE_C_FLAGS_DEBUG "-g -Wall")
@@ -9,7 +7,6 @@ set(CMAKE_C_FLAGS_RELEASE "-s -O2")
 file(GLOB SOURCE_FILES "*.c")
 
 find_package(SDL2 REQUIRED)
-find_package(SDL2_image REQUIRED)
 include_directories(${SDL2_INCLUDE_DIRS})
 
 if(BUILD_SHARED_LIBS)
@@ -17,10 +14,5 @@ if(BUILD_SHARED_LIBS)
 else()
 	add_library(${PROJECT_NAME} STATIC ${SOURCE_FILES})
 endif()
+target_link_libraries(${PROJECT_NAME} ${SDL2_LIBRARIES})
 target_include_directories(${PROJECT_NAME} PRIVATE src/)
-if (CMAKE_C_COMPILER_ID MATCHES "Clang")
-	target_link_libraries(${PROJECT_NAME}
-		${SDL2_LIBRARIES}
-		SDL2_image
-	)
-endif()
