--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.25)
 
-project(AuriTextExample LANGUAGES C VERSION 1.0)
+project(AuriTextSDL2Example LANGUAGES C VERSION 1.0)
 
 set(CMAKE_C_FLAGS_DEBUG "-g -Wall")
 set(CMAKE_C_FLAGS_RELEASE "-s -O2")
@@ -14,12 +14,12 @@ include_directories(
 	${SDL2_image_INCLUDE_DIRS}
 )
 
-add_library(AuriText STATIC ../auriText.c)
+add_library(AuriText-SDL2 STATIC ../auriText.c)
 
 add_executable(${PROJECT_NAME} ${SOURCE_FILES})
 target_link_libraries(${PROJECT_NAME}
 	${SDL2_LIBRARIES}
 	SDL2_image
-	AuriText
+	AuriText-SDL2
 )
 target_include_directories(${PROJECT_NAME} PRIVATE src/)
